<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.pedro.contador.MainActivity">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/som"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/som"
        android:layout_below="@id/titulo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:textColor="@color/white"
        android:textSize="24sp"/>
    <Spinner
        android:id="@+id/sons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/som"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_toEndOf="@id/som"
        android:layout_alignBottom="@id/som"
        android:background="@color/white"
        android:entries="@array/sons">
    </Spinner>
    <ImageButton
        android:id="@+id/ajuda1"
        android:contentDescription="@string/app_name"
        android:layout_toRightOf="@id/sons"
        android:layout_toEndOf="@id/sons"
        android:layout_alignBottom="@id/sons"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:onClick="helpHandler"
        android:background="@drawable/roundedbutton"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_help"/>
    <Button
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sons"
        android:layout_marginTop="6dp"
        android:enabled="false"
        android:background="@color/white"
        android:text="@string/previa"
        android:onClick="preview"
        android:layout_alignLeft="@id/sons"
        android:layout_alignStart="@id/sons"/>
    <TextView
        android:id="@+id/tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo"
        android:layout_below="@id/som"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:textColor="@color/white"
        android:textSize="24sp"/>
    <ImageButton
        android:id="@+id/ajuda2"
        android:contentDescription="@string/app_name"
        android:layout_toRightOf="@id/tempo"
        android:layout_toEndOf="@id/tempo"
        android:layout_alignBottom="@id/tempo"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:onClick="helpHandler"
        android:background="@drawable/roundedbutton"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_help"/>
    <TextView
        android:id="@+id/horas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        android:layout_below="@id/tempo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textColor="@color/white"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/horas_texto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:inputType="number"
        android:layout_marginLeft="6dp"
        android:textSize="48sp"
        android:layout_marginStart="6dp"
        android:layout_below="@id/horas"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutos"
        android:layout_below="@id/tempo"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/horas"
        android:layout_toRightOf="@id/horas"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/white"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/minutos_texto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:inputType="number"
        android:layout_marginLeft="36dp"
        android:layout_toEndOf="@id/horas_texto"
        android:layout_toRightOf="@id/horas_texto"
        android:textSize="48sp"
        android:layout_marginStart="36dp"
        android:layout_below="@id/minutos"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/segundos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundos"
        android:layout_below="@id/tempo"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/minutos"
        android:layout_toRightOf="@id/minutos"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/segundos_texto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:inputType="number"
        android:layout_marginLeft="36dp"
        android:layout_toEndOf="@id/minutos_texto"
        android:layout_toRightOf="@id/minutos_texto"
        android:textSize="48sp"
        android:layout_marginStart="36dp"
        android:layout_below="@id/segundos"
        android:background="@color/white"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:onClick="iniciar"
        android:layout_below="@id/minutos_texto"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/minutos"
        android:layout_alignLeft="@id/minutos"
        android:text="@string/iniciar"/>


</RelativeLayout>
